@@ -1103,8 +1103,8 @@ class SynchronizationViewsTestCase(BrickTestCaseMixin, _EmailsTestCase):
         self.assertEqual(sender2.email,    email2.sender)
         self.assertEqual(recipient2.email, email2.recipient)
 
-    def test_accept_email_to_syn02(self):
-        "Reception date."
+    def test_accept_email_to_sync02(self):
+        "Reception date + only one recipient."
         # user = self.login()
         user = self.login_as_root_and_get()
 
@@ -1134,7 +1134,7 @@ class SynchronizationViewsTestCase(BrickTestCaseMixin, _EmailsTestCase):
             type=EmailToSyncPerson.Type.RECIPIENT,
             email=recipient_contact.email,
             person=recipient_contact,
-            is_main=True,
+            # is_main=True, => not needed
         )
 
         self.assertPOST200(self.ACCEPT_EMAIL_URL, data={'ids': e2s.id})
@@ -1144,7 +1144,7 @@ class SynchronizationViewsTestCase(BrickTestCaseMixin, _EmailsTestCase):
         self.assertEqual(reception_date, email.reception_date)
 
     @skipIfCustomContact
-    def test_accept_email_to_sync02(self):
+    def test_accept_email_to_sync03(self):
         "Folder already exists."
         # user = self.login()
         user = self.login_as_root_and_get()
@@ -1322,7 +1322,8 @@ class SynchronizationViewsTestCase(BrickTestCaseMixin, _EmailsTestCase):
 
         sender_contact = user.linked_contact
         # recipient_contact = self.other_user.linked_contact
-        recipient_contact = self.create_user().linked_contact
+        recipient_contact1 = self.create_user(0).linked_contact
+        recipient_contact2 = self.create_user(1).linked_contact
 
         create_person = partial(EmailToSyncPerson.objects.create, email_to_sync=e2s)
         create_person(
@@ -1330,12 +1331,13 @@ class SynchronizationViewsTestCase(BrickTestCaseMixin, _EmailsTestCase):
             email=sender_contact.email,
             person=sender_contact,
         )
-        create_person(
-            type=EmailToSyncPerson.Type.RECIPIENT,
-            email=recipient_contact.email,
-            person=recipient_contact,
-            is_main=False,
-        )
+        for recipient_contact in (recipient_contact1, recipient_contact2):
+            create_person(
+                type=EmailToSyncPerson.Type.RECIPIENT,
+                email=recipient_contact.email,
+                person=recipient_contact,
+                is_main=False,
+            )
 
         response = self.assertPOST409(self.ACCEPT_EMAIL_URL, data={'ids': e2s.id})
         self.assertDictEqual(
