@@ -7,7 +7,10 @@
   ------------
     # Apps :
         * Emails :
-            - The display of error in email synchronisation, when using single actions (accept & delete), has been fixed.
+            - In email synchronisation:
+                - There was an error when accepting a fixed forwarded email.
+                - The display of error, when using single actions (accept & delete), has been fixed.
+
 
 == Version 2.5.10 ==
 
